--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!Doctype html>
 <html>
      <head>
+     <nav>
+          Navigation bar
+     </nav>
       <title>
 	         OH YEAH!!!
 	  </title>
