--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
        <body>
            <p>
              My name is IVAN, I am a performance artist.
-             Deng S is not handsome.
+             Deng is not handsome.
            </p>
-           <img src="R6.jpg" alt=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfNEK9tOm4PMgHxeiOXOuXLc__6xEwt8Zy92t0KIMMyunuqUDT
+           <img src="R6.jpg" alt=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfNEK9tOm4PMgHxeiOXOuXLc__6xEwt8Zy92t0KIMMyunuqUDT>
        </body>
 </html>	   
