--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!Doctype html>
 <html>
-     <head>
+     <head2>
      <nav>
           Navigation bar
      </nav>
       <title>
 	         OH YEAH!!!
 	  </title>
-     </head>
+     </head2>
        <body>
            <p>
              My name is IVAN, I am a performance artist.
