--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	         OH YEAH!!!
       </title>
      </head2>
-       <body>
+       <body bgcolor "green">
            <p>
              My name is IVAN, I am a performance artist.
 	   </p>
