--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	         OH YEAH!!!
       </title>
      </head2>
-       <body bgcolor "green">
+       <body bgcolor="green">
            <h1>
              My name is IVAN, I am a performance artist.
 	   </h1>
